--- a/Eternal.Api/appsettings.json
+++ b/Eternal.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Eternal": "Data Source=localhost;Initial Catalog=Eternal;Trusted_connection=true"
+  }
 }
