--- a/Eternal.Business/Eternal.Business.csproj
+++ b/Eternal.Business/Eternal.Business.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Mapster" Version="7.3.0" />
   </ItemGroup>
 
