Finished autorization filter and implemented contract template

--- a/Eternal.Api/appsettings.json
+++ b/Eternal.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Eternal": "Data Source=localhost;Initial Catalog=Eternal;Trusted_connection=true"
+  },
+
+  "AppSettings": {
+    "Secret": "hnBlouAc69uKZ4FA@sbsU7@Yi1HAQXq4#75LOPo!I1m6ido^4w",
+    "Id": "akepicia"
   }
 }
