--- a/Eternal.Api/appsettings.json
+++ b/Eternal.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Eternal": "Data Source=localhost;Initial Catalog=Eternal;Trusted_connection=true"
+    "Eternal": "Data Source=eternal.db"
   },
 
   "AppSettings": {
