--- a/Eternal.Business/Eternal.Business.csproj
+++ b/Eternal.Business/Eternal.Business.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
   </ItemGroup>
 
   <ItemGroup>
